--- a/src/locales/es/common.json
+++ b/src/locales/es/common.json
@@ -4,5 +4,12 @@
   "error": {
     "server": "Error interno del servidor",
     "not_found": "Recurso no encontrado"
+  },
+  "database": {
+    "error": "Error de la base de datos",
+    "synced": "✅ Base de datos sincronizada con éxito"
+  },
+  "server": {
+    "started": "Servidor iniciado en el puerto: {0}"
   }
 }
